# Django-Admin-Buttons

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
django_admin_button/: boot_django.py  setup.cfg
django_admin_button/templates/admin/: change_list.html
django_admin_buttons/: admin_button.py  boot_django.py
django_admin_buttons/static/django_admin_button/: django_admin_button.js
django_admin_buttons/static/django_admin_buttons/: django_admin_buttons.js
django_admin_buttons/templates/admin/: change_list.html
