[project]
name = "django-admin-buttons"
description = "django-admin-buttons for the Django Admin."
version = "0.2.0"
authors = [
    { name = "Mina Atef", email = "mina.atef0@gmail.com" }
]
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


